--- a/Projeto Completo/index.html
+++ b/Projeto Completo/index.html
@@ -22,7 +22,7 @@
     <footer>
       <p>2024 - Projeto Alura e Google Gemini</p>
     </footer>
-    <script src="data.js"></script>
+    <script type="module" src="./database/database.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
