--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
     <title>Tarot de Ana Gemini</title>
   </head>
-  <body class="v-layout">
+  <body class="v-layout" onload="onload()">
     <main class="v-layout container gap-xl">
       <div class="v-layout center">
         <img class="card card--xs" style="height: 50%; max-height: 400px; width: auto;" src="/assets/images/cards/major-arcana/0-the-fool.jpg">
@@ -74,5 +74,7 @@
     <footer>
       <p>2024 - Projeto Alura e Google Gemini</p>
     </footer>
+    <script type="module" src="../database/database.js"></script>
+    <script src="tarot-card.js"></script>
   </body>
 </html>
