Feat: Dynamically changing card image

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -9,7 +9,7 @@
   <body class="v-layout" onload="onload()">
     <main class="v-layout container gap-xl">
       <div class="v-layout center">
-        <img class="card card--xs" style="height: 50%; max-height: 400px; width: auto;" src="/assets/images/cards/major-arcana/0-the-fool.jpg">
+        <img id="card-image" class="card card--xs" style="height: 50%; max-height: 400px; width: auto;">
       </div>
       <div class="v-layout">
         <section class="card">
