Feat: Dynamically changing card name

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -13,7 +13,7 @@
       </div>
       <div class="v-layout">
         <section class="card">
-          <h1 class="font-size-h6">0 - O Louco</h1>
+          <h1 id="card-name" class="font-size-h6"></h1>
           <p>
             O Louco é uma carta que desperta muitas curiosidades e interpretações. Representa o início de uma jornada, um novo ciclo e a disposição para abraçar o desconhecido. É a carta da aventura, da espontaneidade e da liberdade.
           </p>
