Feat: Dynamically changing card description

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -14,12 +14,7 @@
       <div class="v-layout">
         <section class="card">
           <h1 id="card-name" class="font-size-h6"></h1>
-          <p>
-            O Louco é uma carta que desperta muitas curiosidades e interpretações. Representa o início de uma jornada, um novo ciclo e a disposição para abraçar o desconhecido. É a carta da aventura, da espontaneidade e da liberdade.
-          </p>
-          <p>
-            O louco pode ser associado a figura do bobo da corte. Ambos representam a liberdade de ir além das convenções sociais, a capacidade de enxergar a verdade por trás das aparências e a jornada interior. O bobo da corte, com sua aparente loucura, era muitas vezes um porta-voz da verdade, enquanto o Louco no Tarot simboliza a ruptura com o conhecido e a busca por novas perspectivas.
-          </p>
+          <div id="card-description"></div>
         </section>
         <section class="card">
           <p><strong>Numerologia: 0 e XXII</strong></p>
