Feat: Dynamically changing card numerology

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -16,15 +16,7 @@
           <h1 id="card-name" class="font-size-h6"></h1>
           <div id="card-description"></div>
         </section>
-        <section class="card">
-          <p><strong>Numerologia: 0 e XXII</strong></p>
-          <p>
-            A numerologia atribui ao Louco, tanto o número 0 quanto o XXII. O zero simboliza o início, o vazio e o potencial infinito, representando um novo começo livre de limitações. Já o XXII indica a jornada completa, a integração dos opostos e a transcendência, simbolizando a busca por uma compreensão mais profunda da realidade.
-          </p>
-          <p>
-            A dualidade entre esses números reflete a natureza paradoxal do Louco, que é tanto o ponto de partida quanto o destino final. Essa combinação numérica enfatiza a ideia de que o Louco representa um ciclo constante de criação e destruição, de início e fim, de potencial e realização.
-          </p>
-        </section>
+        <section id="card-numerology" class="card"></section>
         <section class="card">
           <p><strong>Palavras-chave</strong></p>
           <p>
