Feat: Dynamically changing card keywords

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -17,12 +17,7 @@
           <div id="card-description"></div>
         </section>
         <section id="card-numerology" class="card"></section>
-        <section class="card">
-          <p><strong>Palavras-chave</strong></p>
-          <p>
-            Novos começos, aventura, espontaneidade, intuição, liberdade, crescimento pessoal, inocência, riscos, oportunidades.
-          </p>
-        </section>
+        <section id="card-keywords" class="card"></section>
         <section class="card">
           <h2 class="font-size-xl">Significado geral</h2>
           <br/>
