Feat: Dynamically changing card general, positive and negative meanings

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -19,37 +19,16 @@
         <section id="card-numerology" class="card"></section>
         <section id="card-keywords" class="card"></section>
         <section class="card">
-          <h2 class="font-size-xl">Significado geral</h2>
-          <br/>
-          <ul class="general">
-            <li>Novas Começos: O Louco simboliza o início de algo novo, seja um projeto, um relacionamento ou uma nova fase da vida.</li>
-            <li>Intuição e Espontaneidade: A carta incentiva a confiar na intuição e a agir de forma impulsiva, mas positiva. É um convite para deixar de lado os planos e seguir o fluxo da vida.</li>
-            <li>Crescimento Pessoal: O Louco representa a necessidade de sair da zona de conforto e buscar novas experiências para evoluir como pessoa.</li>
-            <li>Inocência e Pureza: A carta traz consigo uma energia de pureza e inocência, convidando a enxergar o mundo com olhos de criança.</li>
-            <li>Riscos e Oportunidades: O Louco nos lembra que a vida é cheia de riscos, mas também de grandes oportunidades. É preciso ter coragem para seguir em frente.</li>
-          </ul>
+          <h2 class="font-size-xl">Significado geral</h2></ul>
+          <ul id="card-general-meaning" class="general"></ul>
         </section>
         <section class="card">
           <h2 class="font-size-xl">Lado positivo</h2>
-          <br/>
-          <ul class="positive">
-            <li><strong>Novas Começos:</strong> O Louco simboliza o início de algo novo, seja um projeto, um relacionamento ou uma nova fase da vida.</li>
-            <li>Intuição e Espontaneidade: A carta incentiva a confiar na intuição e a agir de forma impulsiva, mas positiva. É um convite para deixar de lado os planos e seguir o fluxo da vida.</li>
-            <li>Crescimento Pessoal: O Louco representa a necessidade de sair da zona de conforto e buscar novas experiências para evoluir como pessoa.</li>
-            <li>Inocência e Pureza: A carta traz consigo uma energia de pureza e inocência, convidando a enxergar o mundo com olhos de criança.</li>
-            <li>Riscos e Oportunidades: O Louco nos lembra que a vida é cheia de riscos, mas também de grandes oportunidades. É preciso ter coragem para seguir em frente.</li>
-          </ul>
+          <ul id="card-positive-meaning" class="positive"></ul>
         </section>
         <section class="card">
           <h2 class="font-size-xl">Lado negativo</h2>
-          <br/>
-          <ul class="negative">
-            <li>Novas Começos: O Louco simboliza o início de algo novo, seja um projeto, um relacionamento ou uma nova fase da vida.</li>
-            <li>Intuição e Espontaneidade: A carta incentiva a confiar na intuição e a agir de forma impulsiva, mas positiva. É um convite para deixar de lado os planos e seguir o fluxo da vida.</li>
-            <li>Crescimento Pessoal: O Louco representa a necessidade de sair da zona de conforto e buscar novas experiências para evoluir como pessoa.</li>
-            <li>Inocência e Pureza: A carta traz consigo uma energia de pureza e inocência, convidando a enxergar o mundo com olhos de criança.</li>
-            <li>Riscos e Oportunidades: O Louco nos lembra que a vida é cheia de riscos, mas também de grandes oportunidades. É preciso ter coragem para seguir em frente.</li>
-          </ul>
+          <ul id="card-negative-meaning" class="negative"></ul>
         </section>
       </div>
     </main>
