Refac: changing the-deck page functionality from search to filter

--- a/Projeto/pages/tarot-card.html
+++ b/Projeto/pages/tarot-card.html
@@ -55,7 +55,7 @@
     <footer>
       <p>2024 - Projeto Alura e Google Gemini</p>
     </footer>
-    <script type="module" src="../database/database.js"></script>
-    <script src="tarot-card.js"></script>
+    <script type="module" src="/database/database.js"></script>
+    <script src="/pages/tarot-card.js"></script>
   </body>
 </html>
