--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -35,7 +35,9 @@
       <div class="fill-height v-layout bottom">
         <div class="text-center font-size-lg font-amarante">Sorte do dia</div>
         <input type="text" placeholder="Seu nome completo"/>
-        <input type="text" placeholder="Data de nascimento"/>
+        <div class="date-input" placeholder="Dada de nascimento">
+          <input type="date" required/>
+        </div>
         <button class="primary" onclick="searchCard()">Tirar a sorte</button>
       </div>
       <div class="v-layout fill-height" id="search-results-list"></div>
