Feat: Adding how it works to luck of day

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -38,7 +38,10 @@
         <div class="date-input" placeholder="Dada de nascimento">
           <input id="date-input" type="date" required/>
         </div>
-        <button class="primary" onclick="luckOfTheDay()">Tirar uma carta</button>
+        <div class="v-layout gap-xs">
+          <button class="primary" onclick="luckOfTheDay()">Tirar uma carta</button>
+          <button class="link" onclick="howItWorks()">Como funciona?</button>
+        </div>
       </div>
       <div class="v-layout fill-height" id="search-results-list"></div>
     </main>
