--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -48,7 +48,7 @@
     <footer>
       <p>2024 - Projeto Alura e Google Gemini</p>
     </footer>
-    <script type="module" src="./database/database.js"></script>
+    <script type="module" src="/database/database.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
