--- a/Projeto/pages/about-ana-gemini.html
+++ b/Projeto/pages/about-ana-gemini.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Oráculo do Tarot, por Ana Gemini" />
+    <meta property="og:description" content="Consulte o Tarot para decisões importantes, tire sua sorte do dia ou estude o significado das cartas para as suas próprias leituras" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="/assets/images/og-img-min.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
-    <title>Tarot de Ana Gemini</title>
+    <title>Quem é Ana Gemini?</title>
   </head>
   <body class="v-layout">
     <header>
